# rm32

./: .gitignore  .pre-commit-config.yaml  CRITIQUE.md  Cargo.toml  FEEDBACK_PR2.md  PR4_REVIEW.md  README.md  SHAREDCOMM_AUDIT.md  TEST_MATRIX_PLAN.md  VISIBILITY_AUDIT.md  codecov.yml  default.profraw
.config/: nextest.toml
.github/workflows/: ci.yml  codecov.yml  coverage.yml
rm32/: Cargo.toml  TEST_PARITY.md  TODO.md  librust_out.rlib
rm32/src/: bemf.rs  board.rs  brushed.rs  commutation.rs  config.rs  constants.rs  control.rs  crsf.rs  current.rs  dshot.rs  dshot_commands.rs  edt.rs  eeprom.rs  filter.rs  fixed_mode.rs  functions.rs  hal.rs  input_mapping.rs  lib.rs  main_state.rs  motor_mode.rs  ntc.rs  pid.rs  polling.rs  servo.rs  shared_comm.rs  shared_state.rs  signal.rs  sine.rs  sounds.rs  system.rs  telemetry.rs  transfer.rs  units.rs  ws2812.rs
rm32/src/control/: context.rs  input.rs  isr_logic.rs  shared_impl.rs  state.rs  tests.rs  tick.rs
rm32_std/: Cargo.toml
rm32_std/src/: main.rs
rm32_stm32/: AUDIT_CHECKLIST.md  Cargo.toml  STRUCTURAL_IMPROVEMENTS.md  TODO.md  build.rs  memory.x
rm32_stm32/boards/: flycolor_g071.yaml  gen_64k_g071.yaml  iflight_12s_g071.yaml  iflight_f051.yaml  mamba_f55_g071.yaml  neutron_l431.yaml  protondrive_g431.yaml  pwm_enable_g071.yaml  sequre_g431.yaml  siskin_f051.yaml  tbs_12s_g071.yaml  tbs_4in1_g071.yaml  vimdrones_l431.yaml  wraith32v2_f051.yaml
rm32_stm32/src/: adc.rs  adc_f051.rs  adc_g431.rs  adc_generic.rs  adc_hal.rs  adc_l431.rs  capture_generic.rs  capture_hal.rs  comp_hal.rs  comp_init.rs  comp_init_f051.rs  comp_init_g431.rs  comp_init_l431.rs  comparator.rs  dma_buf.rs  emergency.rs  flash.rs  gpio_pin.rs  gpio_regs.rs  init.rs  input_capture.rs  input_capture_f051.rs  input_capture_g431.rs  input_capture_l431.rs  interrupts.rs  interrupts_f051.rs  interrupts_g071.rs  interrupts_g431.rs  interrupts_l431.rs  isr.rs  isr_handlers.rs  lib.rs  main_loop.rs  mcu.rs  panic.rs  periph_addr.rs  phase.rs  pwm.rs  regs.rs  shared.rs  (+10 more)
rm32_stm32/src/mcu_f051/: adc.rs  chip.rs  comp_init.rs  comparator.rs  flash.rs  init.rs  input_capture.rs  interrupts.rs  mod.rs  pwm.rs  system.rs  telemetry_uart.rs
rm32_stm32/src/mcu_g071/: adc.rs  chip.rs  comp_init.rs  comparator.rs  flash.rs  init.rs  input_capture.rs  interrupts.rs  mod.rs  pwm.rs  system.rs  telemetry_uart.rs
rm32_stm32/src/mcu_g431/: adc.rs  chip.rs  comp_init.rs  comparator.rs  flash.rs  init.rs  input_capture.rs  interrupts.rs  pwm.rs  system.rs  telemetry_uart.rs
rm32_stm32/src/mcu_l431/: adc.rs  chip.rs  comp_init.rs  comparator.rs  flash.rs  init.rs  input_capture.rs  interrupts.rs  pwm.rs  system.rs  telemetry_uart.rs
tests/blackbox/: harness.py  test_vectors.py
tests/blackbox/vectors/: arming_basic.txt  bemf_timeout.txt  bemf_timeout_dynamic.txt  bidir_dshot.txt  bidir_dshot_fault.txt  bidir_dshot_rccar_fault.txt  bidir_dshot_recovery.txt  brake_modes.txt  dead_time_override.txt  desync_detection.txt  desync_recovery.txt  dshot_commands.txt  dshot_commands_extended.txt  dshot_input.txt  dshot_telemetry.txt  e_com_time_populated.txt  edt_armed_throttle_gate.txt  eeprom_load.txt  gcr_encoding.txt  pid_loops.txt  (+22 more)
