[package]
name = "rm32"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0"
bytemuck = { version = "1", default-features = false, features = ["derive"] }
heapless = "0.8"
dronecan = { path = "../ref/dronecan-rust", default-features = false, optional = true }

[[bin]]
name = "rm32_harness"
path = "src/bin/harness.rs"


[features]
default = []
dronecan = ["dep:dronecan"]
